--- a/auth-server/serverless.yml
+++ b/auth-server/serverless.yml
@@ -26,7 +26,9 @@ provider:
 
 # you can overwrite defaults here
 #  stage: dev
-#  region: us-east-1
+  region: us-east-1
+#  region: eu-central-1
+  timeout: 30 
 
 # you can add statements to the Lambda function's IAM Role here
 #  iam:
@@ -47,9 +49,10 @@ provider:
 #                - "/*"
 
 # you can define service wide environment variables here
-#  environment:
-#    variable1: value1
-
+  environment:
+    CLIENT_ID: ${file(config.json):CLIENT_ID}
+    CLIENT_SECRET: ${file(config.json):CLIENT_SECRET}
+    CALENDAR_ID: ${file(config.json):CALENDAR_ID}
 # you can add packaging information here
 #package:
 #  patterns:
@@ -59,8 +62,19 @@ provider:
 #    - include-me-dir/**
 
 functions:
-  hello:
-    handler: handler.hello
+  getAuthURL:
+    handler: handler.getAuthURL
+    events:
+      - http:
+          path: api/get-auth-url
+          method: get
+
+    getAccessToken: 
+      handler: handler.getAccessToken
+      events:
+       - http:
+          path: api/token/{code}
+          method: get
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
