--- a/auth-server/serverless.yml
+++ b/auth-server/serverless.yml
@@ -50,7 +50,7 @@ provider:
 
   # you can define service wide environment variables here
   environment:
-    CLIENT_ID: $(file(config.json):CLIENT_ID)
+    CLIENT_ID: ${file(config.json):CLIENT_ID}
     CALENDAR_ID: ${file(config.json):CALENDAR_ID}
     CLIENT_SECRET: ${file(config.json):CLIENT_SECRET}
 # you can add packaging information here
